refactor document module and externalize app configuration